# PR_RAG

./: .env.example  .env.production  .gitignore  README.md  install.bat  install.sh  project_layout.md  pyproject.toml  quickstart.py  setup_migrations.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
docs/: DEPLOYMENT.md  README_circuit_breaker.md  README_migrations.md  README_reranking.md  demo_circuit_breaker.py  demo_reranking.py
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: deploy.sh  init_db.sql
src/rag_system/: __init__.py  main.py
src/rag_system/api/: __init__.py  middleware.py  routes.py  schemas.py
src/rag_system/core/: __init__.py  config.py  dependencies.py
src/rag_system/db/: __init__.py  models.py  pgvector.py
src/rag_system/db/migrations/: alembic.ini  env.py
src/rag_system/db/migrations/versions/: 001_dynamic_vectors.py
src/rag_system/services/: __init__.py  cache.py  embeddings.py  generator.py  ingestion.py  retriever.py
src/rag_system/utils/: __init__.py  chunking.py  circuit_breaker.py  exceptions.py  monitoring.py
tests/: conftest.py  test_api.py  test_cache.py  test_circuit_breaker.py  test_dependencies.py  test_dynamic_dimensions.py  test_embeddings.py  test_generator.py  test_ingestion.py  test_middleware.py  test_monitoring.py  test_pgvector.py  test_rag_quality.py  test_reranking.py  test_retrieval.py
tests/e2e/: test_end_to_end.py
